test/frontend/fail/bad_binary_operator.osl
struct S { int empty; };
S __operator__add__(S x) { return S(0); }
shader foo() {}
